--- a/front/src/components/Dashboard/Dashboard.module.css
+++ b/front/src/components/Dashboard/Dashboard.module.css
@@ -1,16 +1,24 @@
 .dashboardContainer {
-    padding: 20px;
-    background-color: #f4f4f4;
+
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 2px solid rgb(63, 97, 136); /* Borde azul */
+    border-radius: 12px;
+    padding: 20px;
+    color: #f1f1f1; /* Texto claro */
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro semi-transparente */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombrita sutil */
 }
 
 .title {
-    font-size: 2rem;
-    font-weight: 600;
-    color: #333;
+    color: white;
+    font-size: 32px;
+    font-weight: bold;
+    text-align: center;
     margin-bottom: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
 }
 
 .statsContainer {
@@ -22,7 +30,7 @@
 }
 
 .statCard {
-    background-color: #fff;
+    background-color: #312c2c;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -37,12 +45,12 @@
 
 .statCard h2 {
     font-size: 1.2rem;
-    color: #444;
+    color: #b1adad;
     margin-bottom: 10px;
 }
 
 .statValue {
     font-size: 2rem;
     font-weight: 700;
-    color: #4caf50; /* Puedes cambiar el color dependiendo del estado (activo, inactivo, etc.) */
+    color: rgb(63, 97, 136);
 }
