--- a/front/src/components/EditUserForm.jsx/EditUserForm.module.css
+++ b/front/src/components/EditUserForm.jsx/EditUserForm.module.css
@@ -6,14 +6,18 @@
         border-radius: 12px;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         font-family: 'Segoe UI', sans-serif;
+        background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro semi-transparente */
+         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombrita sutil */
     }
     
     .title {
-        text-align: center;
-        margin-bottom: 1.5rem;
-        font-size: 1.8rem;
+        color: white;
+        font-size: 32px;
         font-weight: bold;
-        color: #333;
+        text-align: center;
+        margin-bottom: 20px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
     }
     
     .formGroup {
@@ -24,17 +28,26 @@
         display: block;
         font-size: 0.9rem;
         margin-bottom: 0.4rem;
-        color: #555;
+        color: #b1adad;
     }
     
-    .input {
-        width: 100%;
-        padding: 0.6rem;
-        font-size: 1rem;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        transition: border-color 0.3s ease;
-    }
+    
+.input {
+    justify-content: center;
+    border: 1px solid #9cb3e2;
+    border-radius: 7px;
+    font-size: 16px;
+    padding: 20px;
+    outline: none;
+    background: none;
+    background-color: #3f3f40;
+    z-index: 1;
+    height: 20px;
+    width: 350px;
+    color: #DADCE0;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
     
     .input:focus {
         border-color: #007bff;
@@ -42,18 +55,25 @@
     }
     
     .button {
-        width: 100%;
-        padding: 0.75rem;
-        background-color: #007bff;
-        border: none;
-        border-radius: 8px;
-        color: white;
-        font-size: 1rem;
-        font-weight: bold;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
+        background-color: rgb(63, 97, 136);
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: white; 
+        border: 2px solid rgb(63, 97, 136);
+        border-radius: 10px;
+        padding: 5px 5px; 
+        font-size: 20px;
+        cursor: pointer; 
+        transition: background-color 0.3s, color 0.3s, border-color 0.3s; 
+        align-self: flex-end; /* Alinea el botón al extremo derecho del contenedor */
+        margin-right: 10px; /* Agrega un margen derecho para separar el botón del texto */
+    }
+    .button:hover {
+        background-color: white; 
+        color: rgb(63, 97, 136); 
     }
     
-    .button:hover {
-        background-color: #0056b3;
-    }
+    .button:active {
+        background-color: white; 
+        color: rgb(63, 97, 136); 
+        border-color: rgb(63, 97, 136); 
+    } 
