--- a/front/src/components/Login/Login.module.css
+++ b/front/src/components/Login/Login.module.css
@@ -1,3 +1,10 @@
+body {
+    background-color: #312c2c;
+    margin: 0; /* Elimina el margen predeterminado del body */
+    padding: 0; /* Elimina el padding predeterminado del body */
+    height: 100vh; /* Asegura que el fondo ocupe toda la altura de la ventana */
+}
+
 .fondo {
     
         background-color: #3f3f40;
@@ -31,7 +38,15 @@
             opacity: 1;
         }
     }
-    
+    .title {
+        color: white;
+        font-size: 32px;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 20px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+    }
 
 .input {
     justify-content: center;
@@ -76,4 +91,11 @@
 .button:disabled {
     background-color: rgb(108, 133, 161);; 
     cursor: not-allowed; /* Cambia el cursor para indicar que está deshabilitado */
+}
+
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    gap: 10px; /* espacio entre los botones */
+    margin-top: 10px;
 }
